offer modal added

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,10 @@ body{
       $('nav').removeClass('black');
       $('nav').removeClass('shadow')
     }
-  });
+  }); $(document).ready(function(){                  
+          $('#offer-modal').modal('show'); 
+        });
+    
   </script>
   </body>
 </html>
