decrease carousel transition time

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,12 @@ body{
   }); $(document).ready(function(){                  
           $('#offer-modal').modal('show'); 
         });
-    
+    $(document).ready(function(){
+     $("#carouselExampleCaptions").carousel({
+         interval : 1000,
+         pause: false
+     });
+});
   </script>
   </body>
 </html>
