decrease carousel transition time

--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,12 @@ body{
          pause: false
      });
 });
+     $(document).ready(function(){
+     $("#galleryCarousel").carousel({
+         interval : 2000,
+         pause: false
+     });
+  });
   </script>
   </body>
 </html>
